0.2.1(working)
* 1 major addition
  * Added Document#paginate which works just like find but adds pagination (dcu did basics and I pimped)
  * Added a basic console for playing around with MongoMapper (dcu)
  * Embedded associations can now be deeply nested (Keith Hanson)
  * Added support for many polymorphic documents (Felipe Coury and Me)
  * Fixed bug where conditions that disallowed using $in, $all and $any with an array
  * Bumped version of validatable so :if validation option supports symbol/string to proc.

0.2.0 7/7/2009
* 2 major additions (observers, associations), several minor additions, and a few bug fixes
  * Added observers
  * many now supports embedded docs or docs in another collection (dcu on github)
  * added belongs_to association (dcu)
  * added validates_uniqueness_of (dcu)
  * added :unique key shortcut to add validates_uniqueness_of automatically
  * now tracking descendants of document (dcu)
  * added validates_exclusion_of and validates_inclusion_of
  * Bumped required version of validatable for callback fixes
  * More thorough use of converting find conditions and options to mongo speak
  * #attributes= no longer bombs when given nil
  
0.1.2 7/3/2009
* 2 minor changes
  * Straightened out callbacks and added validate, validate_on_create and validate_on_update.
  * Attributes passed into attributes= now call writer methods if they exist. This is mostly for virtual attributes.
  
0.1.1 6/28/2009
* 1 minor change
  * bumped ruby driver to 0.9 and removed hacks I had in while waiting for it
  
0.1.0 6/26/2009
* Initial release