@@ -6,6 +6,7 @@
   * Added support for many polymorphic documents (Felipe Coury and Me)
   * Fixed bug where conditions that disallowed using $in, $all and $any with an array
   * Bumped version of validatable so :if validation option supports symbol/string to proc.
+  * Document#create with no attributes now creates a document as long as it is valid
 
 0.2.0 7/7/2009
 * 2 major additions (observers, associations), several minor additions, and a few bug fixes
